fix: minmax height on mobile

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -7,6 +7,7 @@
 }
 html, body {
   height: 100%;
+  min-height: -webkit-fill-available;
   overflow: hidden;
 }
 body {
@@ -23,10 +24,10 @@ body {
   flex-direction: column;
   width: 100%;
   flex: 1;
-  min-height: 100vh;
+  min-height: 100dvh;
   overflow: hidden;
-  -webkit-mask-size: 100vw 100vh;
-          mask-size: 100vw 100vh;
+  -webkit-mask-size: 100vw 100dvh;
+          mask-size: 100vw 100dvh;
   -webkit-mask-position: center center;
           mask-position: center center;
   -webkit-mask-repeat: no-repeat;
